# ArcCache

./: CMakeLists.txt  README.md  arc.h  main.cpp
ARC/: CMakeLists.txt  arc.h  main.cpp  run_tests.sh
LRU/: CMakeLists.txt  lru.h  main.cpp
PerfectCache/: CMakeLists.txt  main.cpp  perfect_cache.h  run_tests.sh
TESTS/: ans_generator.py  compare_ans.py  test_generator.py
TESTS/test_01/: test
TESTS/test_1/: test
TESTS/test_10/: test
TESTS/test_12/: test
TESTS/test_13/: test
TESTS/test_14/: test
TESTS/test_18/: test
TESTS/test_2/: test
TESTS/test_20/: test
TESTS/test_21/: test
TESTS/test_22/: test
TESTS/test_25/: test
TESTS/test_3/: test
TESTS/test_32/: test
TESTS/test_33/: test
TESTS/test_35/: test
TESTS/test_37/: test
TESTS/test_4/: test
TESTS/test_40/: test
TESTS/test_41/: test
TESTS/test_5/: test
TESTS/test_6/: test
TESTS/test_7/: test
TESTS/test_8/: test
TESTS/test_9/: test
Tests/: cmp_ans.py  gen_ans.py  gen_test.py  process_all_tests.sh
Tests/test_01/: arc_cache.ans  perfect_cache.ans  test
Tests/test_02/: arc_cache.ans  perfect_cache.ans  test
Tests/test_03/: arc_cache.ans  perfect_cache.ans  test
Tests/test_04/: arc_cache.ans  perfect_cache.ans  test
Tests/test_05/: arc_cache.ans  perfect_cache.ans  test
Tests/test_06/: arc_cache.ans  perfect_cache.ans  test
Tests/test_07/: arc_cache.ans  perfect_cache.ans  test
Tests/test_08/: arc_cache.ans  perfect_cache.ans  test
Tests/test_09/: arc_cache.ans  perfect_cache.ans  test
Tests/test_10/: arc_cache.ans  perfect_cache.ans  test
UnitTests/: CMakeLists.txt  tests.cpp
(+68 files in other folders)
